test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/shadowing_in_reexporting_module/src/items_4_4.sw
library;

pub enum Items4_Variants2 {
    M: u64,
    N: u64,
}
