test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/shadowing_in_reexporting_module/src/items_4_3.sw
library;

pub enum Items4_Variants2 {
    M: bool,
    N: bool,
}
